--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -44,7 +44,7 @@
             <div class="alert alert-danger text-center">{{ error }}</div>
         {% endif %}
 
-        <form id="login" method="post" action="/login">
+        <form id="login" method="post" action="/">
             <div class="mb-3">
                 <label for="username" class="form-label">Usuario</label>
                 <input type="text" class="form-control" id="username" name="username" required autofocus>
