--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -18,7 +18,7 @@
             <a class="navbar-brand" href="/home">Variedades LULU</a>
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="/login">Salir</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/">Salir</a></li>
                 </ul>
             </div>
         </div>
