--- a/app/templates/proveedores.html
+++ b/app/templates/proveedores.html
@@ -17,7 +17,7 @@
             <datalist id="supplierList"></datalist>
 
             <label for="supplierPhone">Teléfono:</label>
-            <input type="tel" id="supplierPhone" name="supplierPhone" required>
+            <input type="tel" id="supplierPhone" name="supplierPhone">
 
             <button type="submit">Agregar Proveedor</button>
             <div style="margin-top: 30px;">
