--- a/app/templates/proveedores.html
+++ b/app/templates/proveedores.html
@@ -13,7 +13,7 @@
         <h2>Agregar Nuevo Proveedor</h2>
         <form id="addSupplierForm" action="/ingresos/supplier/create" method="POST">
             <label for="supplierName">Nombre del Proveedor:</label>
-            <input list="supplierList" id="supplierName" name="supplierName">
+            <input list="supplierList" id="supplierName" name="supplierName" required>
             <datalist id="supplierList"></datalist>
 
             <label for="supplierPhone">Teléfono:</label>
