vista para actualizacion inventario

--- a/app/templates/productos.html
+++ b/app/templates/productos.html
@@ -64,6 +64,7 @@
         <br>
         <button type="submit" class="btn btn-primary">Registrar Ingreso</button>
         <a href="/home" class="btn btn-outline-secondary">Home</a>
+        <a href="/inventario" class="btn btn-primary">Gestión de Inventario</a>
     </form>
 </div>
 
