--- a/app/templates/inventario.html
+++ b/app/templates/inventario.html
@@ -54,7 +54,7 @@
                                 <button class="btn-accion" onclick="updateQuantity(${item.id})">Actualizar</button>
                             </td>
                             <td>
-                                <button class="btn-eliminar" onclick="deleteProduct(${item.id})">🗑 Eliminar</button>
+                                <button class="btn-eliminar" onclick="deleteProduct(${item.id})">🗑</button>
                             </td>
                         `;
 
