--- a/static/css/styles_productos.css
+++ b/static/css/styles_productos.css
@@ -21,9 +21,9 @@ body {
 
 /* Contenedor principal */
 .container {
-    background-color: rgba(255, 255, 255, 0.92);
-    backdrop-filter: blur(6px);
-    -webkit-backdrop-filter: blur(6px);
+    background-color: rgba(255, 255, 255, 0.962);
+    /* backdrop-filter: blur(6px); */
+    /* -webkit-backdrop-filter: blur(6px); */
     border-radius: 12px;
     padding: 40px;
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.18);
