actualizacion modulo subir facturas

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -67,6 +67,8 @@
 
     <footer>
         &copy; {{ current_year }} Variedades LULU. Todos los derechos reservados.
+        <br></br>
+        Desarrollado por <a href="https://github.com/Billy-prompt" target="_blank">BillyDev 🧑‍💻</a>.
     </footer>
 
 </body>
