--- a/app/templates/ventas.html
+++ b/app/templates/ventas.html
@@ -39,7 +39,7 @@
         <input type="number" id="total" name="total" class="form-control" step="0.01" readonly>
 
         <label for="fecha">Fecha de Venta:</label>
-        <input type="date" id="fecha" name="fecha" class="form-control" required>
+        <input type="date" id="fecha" name="fecha" class="form-control" required readonly>
         <br></br>
         <button type="button" id="agregar-item" class="btn btn-secondary mt-3">Agregar Producto</button>
         
