--- a/app/templates/productos.html
+++ b/app/templates/productos.html
@@ -13,7 +13,7 @@
     <form id="formulario-productos" action="/registrar" method="POST">
         <div class="mb-3">
             <label for="fecha_ingreso" class="form-label">Fecha de Ingreso</label>
-            <input type="date" class="form-control" id="fecha_ingreso" name="fecha_ingreso" required>
+            <input type="date" class="form-control" id="fecha_ingreso" name="fecha_ingreso" required readonly>
         </div>
         <div class="mb-3">
             <label for="proveedor_select" class="form-label">Proveedor</label>
